--- a/.config/sway/config
+++ b/.config/sway/config
@@ -22,8 +22,8 @@ bindsym $mod+Return exec $term
 bindsym $mod+e exec $fileManager
 bindsym $mod+Shift+p exec $screenshot
 bindsym $mod+n exec swaync-client -t -sw
-bindsym $mod+Shift+t exec i3-gnome-pomodoro start
-bindsym $mod+Shift+z exec i3-gnome-pomodoro toggle
+bindsym $mod+k exec i3-gnome-pomodoro start
+bindsym $mod+l exec i3-gnome-pomodoro toggle
 bindsym $mod+p exec cliphist list | wofi -S dmenu | cliphist decode | wl-copy
 bindsym --whole-window button8 exec wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
@@ -51,10 +51,11 @@ exec_always --no-startup-id systemctl --user import-environment DISPLAY WAYLAND_
 exec_always --no-startup-id dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
 exec_always --no-startup-id autotiling
 exec_always --no-startup-id swaync
+exec_always XDG_MENU_PREFIX=arch- kbuildsycoca6
 exec wl-paste --watch cliphist store
 exec /usr/bin/keepassxc
 exec /usr/bin/flameshot
-exec XDG_MENU_PREFIX=arch- kbuildsycoca6
+
 
 # Window Decoration Settings
 gaps outer 2
@@ -77,7 +78,9 @@ output * {
   position 0,0
   adaptive_sync on
   max_render_time 7
+  allow_tearing yes
 }
+for_window [all] allow_tearing yes
 
 # Idle Configuration
 exec swayidle -w \
@@ -178,7 +181,7 @@ bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
 # Environment Variables
 set $GDK_BACKEND wayland
 set $QT_QPA_PLATFORM wayland
-set $SDL_VIDEODRIVER wayland
+set $SDL_VIDEODRIVER wayland,x11
 set $CLUTTER_BACKEND wayland
 set $XDG_CURRENT_DESKTOP sway
 set $XDG_SESSION_TYPE wayland
