--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,11 +1,30 @@
+[env]
+TERM = "alacritty"
+WINIT_X11_SCALE_FACTOR = "1.0"
+
 [window]
+dimensions = { columns = 82, lines = 24 }
+padding = { x = 10, y = 10 }
+dynamic_title = true
+decorations = "full"
 opacity = 0.9
-dynamic_padding = true
-decorations = "None"
 blur = true
+decorations_theme_variant = "None"
+
+[window.class]
+instance = "Alacritty"
+general = "Alacritty"
+
+[scrolling]
+history = 10000
+multiplier = 3
 
 [font]
 size = 13.0
+builtin_box_drawing = true
+
+[font.normal]
+family = "JetBrainsMono Nerd Font"
 
 [font.offset]
 x = 0
@@ -15,35 +34,86 @@ y = 0
 x = 0
 y = 0
 
-[font.normal]
-family = "JetBrainsMono Nerd Font"
-style = "Regular"
+[colors]
+[colors.primary]
+background = '#1a1b26'
+foreground = '#c0caf5'
 
-[font.italic]
-family = "JetBrainsMono Nerd Font"
-style = "Italic"
+[colors.cursor]
+text = '#1a1b26'
+cursor = '#c0caf5'
 
-[font.bold]
-family = "JetBrainsMono Nerd Font"
-style = "Bold"
+[colors.vi_mode_cursor]
+text = '#1a1b26'
+cursor = '#c0caf5'
 
-[font.bold_italic]
-family = "JetBrainsMono Nerd Font"
-style = "Bold Italic"
+[colors.search]
+matches = { foreground = '#1a1b26', background = '#ff9e64' }
+focused_match = { foreground = '#1a1b26', background = '#7aa2f7' }
 
-[window.dimensions]
-columns = 80
-lines = 24
+[colors.hints]
+start = { foreground = '#1a1b26', background = '#e0af68' }
+end = { foreground = '#1a1b26', background = '#a9b1d6' }
 
-[window.padding]
-x = 10
-y = 10
+[colors.selection]
+text = '#c0caf5'
+background = '#414868'
+
+[colors.normal]
+black =   '#15161e'
+red =     '#f7768e'
+green =   '#9ece6a'
+yellow =  '#e0af68'
+blue =    '#7aa2f7'
+magenta = '#bb9af7'
+cyan =    '#7dcfff'
+white =   '#a9b1d6'
+
+[colors.bright]
+black =   '#414868'
+red =     '#f7768e'
+green =   '#9ece6a'
+yellow =  '#e0af68'
+blue =    '#7aa2f7'
+magenta = '#bb9af7'
+cyan =    '#7dcfff'
+white =   '#c0caf5'
+
+[bell]
+animation = "EaseOutExpo"
+duration = 200
+color = '#c0caf5'
+command = { program = "paplay", args = ["/usr/share/sounds/freedesktop/stereo/dialog-error.oga"] }
 
 [selection]
 save_to_clipboard = true
 semantic_escape_chars = ",│`|:\"' ()[]{}<>"
 
+[cursor]
+style = { shape = "Block", blinking = "On" }
+vi_mode_style = { shape = "Block", blinking = "Off" }
+blink_interval = 750
+blink_timeout = 5
+unfocused_hollow = true
+thickness = 0.15
+
+[mouse]
+hide_when_typing = true
+
 [[hints.enabled]]
-regex = "[^ ]+\\.rs:\\d+:\\d+"
-command = { program = "code", args = [ "--goto" ] }
-mouse = { enabled = true }
+regex = "(ipfs:|ipns:|magnet:|mailto:|gemini://|gopher://|https://|http://|news:|file:|git://|ssh:|ftp://)[^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩‘]+"
+command = "xdg-open"
+hyperlinks = true
+post_processing = true
+persist = false
+mouse.enabled = true
+binding = { key = "U", mods = "Control|Shift" }
+
+[debug]
+render_timer = false
+persistent_logging = false
+log_level = "Warn"
+renderer = "None"
+print_events = false
+highlight_damage = false
+prefer_egl = false⏎
