--- a/.config/wofi/config
+++ b/.config/wofi/config
@@ -1,15 +1,16 @@
-width=600
-height=500
+width=40%
+height=45%
+prompt=Search:
 location=center
-show=drun
-prompt=Apps
-filter_rate=100
-allow_markup=true
-no_actions=true
-halign=fill
+anchor=center
 orientation=vertical
-content_halign=fill
+hide_scroll=true
+lines=10
 insensitive=true
 allow_images=true
-image_size=40
-gtk_dark=true
+show_icons=true
+image_size=32
+matching=fuzzy
+term=alacritty
+parse_actions=true
+
