--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,119 +1,57 @@
 [env]
-TERM = "alacritty"
-WINIT_X11_SCALE_FACTOR = "1.0"
+WINIT_UNIX_BACKEND = "wayland"
 
 [window]
-dimensions = { columns = 82, lines = 24 }
-padding = { x = 10, y = 10 }
-dynamic_title = true
+padding.x = 12
+padding.y = 12
 decorations = "full"
-opacity = 0.9
-blur = true
-decorations_theme_variant = "None"
-
-[window.class]
-instance = "Alacritty"
-general = "Alacritty"
-
-[scrolling]
-history = 10000
-multiplier = 3
+opacity = 0.90
 
 [font]
-size = 13.0
-builtin_box_drawing = true
+size = 11.0
 
-[font.normal]
-family = "JetBrainsMono Nerd Font"
+normal.family = "JetBrainsMono Nerd Font"
+normal.style = "Regular"
 
-[font.offset]
-x = 0
-y = 0
+bold.family = "JetBrainsMono Nerd Font"
+bold.style = "Bold"
 
-[font.glyph_offset]
-x = 0
-y = 0
+italic.family = "JetBrainsMono Nerd Font"
+italic.style = "Italic"
+
+bold_italic.family = "JetBrainsMono Nerd Font"
+bold_italic.style = "Bold Italic"
 
 [colors]
-[colors.primary]
-background = '#1a1b26'
-foreground = '#c0caf5'
+primary.background = "#1e1e2e"
+primary.foreground = "#cdd6f4"
 
-[colors.cursor]
-text = '#1a1b26'
-cursor = '#c0caf5'
+cursor.cursor = "#f5e0dc"
+cursor.text = "#1e1e2e"
 
-[colors.vi_mode_cursor]
-text = '#1a1b26'
-cursor = '#c0caf5'
+selection.background = "#585b70"
+selection.text = "#cdd6f4"
 
-[colors.search]
-matches = { foreground = '#1a1b26', background = '#ff9e64' }
-focused_match = { foreground = '#1a1b26', background = '#7aa2f7' }
+normal.black = "#45475a"
+normal.red = "#f38ba8"
+normal.green = "#a6e3a1"
+normal.yellow = "#f9e2af"
+normal.blue = "#89b4fa"
+normal.magenta = "#f5c2e7"
+normal.cyan = "#94e2d5"
+normal.white = "#bac2de"
 
-[colors.hints]
-start = { foreground = '#1a1b26', background = '#e0af68' }
-end = { foreground = '#1a1b26', background = '#a9b1d6' }
+bright.black = "#a6adc8"
+bright.red = "#f38ba8"
+bright.green = "#a6e3a1"
+bright.yellow = "#f9e2af"
+bright.blue = "#89b4fa"
+bright.magenta = "#f5c2e7"
+bright.cyan = "#94e2d5"
+bright.white = "#cdd6f4"
 
-[colors.selection]
-text = '#c0caf5'
-background = '#414868'
-
-[colors.normal]
-black =   '#15161e'
-red =     '#f7768e'
-green =   '#9ece6a'
-yellow =  '#e0af68'
-blue =    '#7aa2f7'
-magenta = '#bb9af7'
-cyan =    '#7dcfff'
-white =   '#a9b1d6'
-
-[colors.bright]
-black =   '#414868'
-red =     '#f7768e'
-green =   '#9ece6a'
-yellow =  '#e0af68'
-blue =    '#7aa2f7'
-magenta = '#bb9af7'
-cyan =    '#7dcfff'
-white =   '#c0caf5'
-
-[bell]
-animation = "EaseOutExpo"
-duration = 200
-color = '#c0caf5'
-command = { program = "paplay", args = ["/usr/share/sounds/freedesktop/stereo/dialog-error.oga"] }
-
-[selection]
-save_to_clipboard = true
-semantic_escape_chars = ",│`|:\"' ()[]{}<>"
-
-[cursor]
-style = { shape = "Block", blinking = "On" }
-vi_mode_style = { shape = "Block", blinking = "Off" }
-blink_interval = 750
-blink_timeout = 5
-unfocused_hollow = true
-thickness = 0.15
+[scrolling]
+multiplier = 3
 
 [mouse]
 hide_when_typing = true
-
-[[hints.enabled]]
-regex = "(ipfs:|ipns:|magnet:|mailto:|gemini://|gopher://|https://|http://|news:|file:|git://|ssh:|ftp://)[^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩‘]+"
-command = "xdg-open"
-hyperlinks = true
-post_processing = true
-persist = false
-mouse.enabled = true
-binding = { key = "U", mods = "Control|Shift" }
-
-[debug]
-render_timer = false
-persistent_logging = false
-log_level = "Warn"
-renderer = "None"
-print_events = false
-highlight_damage = false
-prefer_egl = false⏎
